--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
         <h2>Update 59: Droaam Legendary Edition</h2>
         <p>April 26th, 2023</p>
       </div>
+      <div class="features">
+        <h3>Main Features:</h3>
+        <ul>
+          <li style="color:Blue;">Hardcore Season 8: The Dragon's Hoard</li>
+        </ul>
+      </div>
       <div class="balance">
         <h3>Balance and Small Features:</h3>
         <ul>
