--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
     <hr>
     <div id="Graph"></div>
     <h2>Statistics and Analysis</h2>
-    <p id="StatsHeader">I have contributed to $VALUE1$ total changes across $VALUE2$ updates. Of those...</p>
+    <p id="StatsHeader">I have contributed to <span class="value">$VALUE1$</span> total changes across <span class="value">$VALUE2$</span> updates. Of those...</p>
     <ul>
-      <li id="StatsHeadline">$VALUE1$ were headline features</li>
-      <li id="StatsBalance">$VALUE1$ were small features or balance changes</li>
-      <li id="StatsBugs">$VALUE1$ were bug fixes</li>
-      <li id="StatsEngineering">$VALUE1$ were engineering changes</li>
+      <li id="StatsHeadline"><span class="value">$VALUE1$</span> were headline features</li>
+      <li id="StatsBalance"><span class="value">$VALUE1$</span> were small features or balance changes</li>
+      <li id="StatsBugs"><span class="value">$VALUE1$</span> were bug fixes</li>
+      <li id="StatsEngineering"><span class="value">$VALUE1$</span> were engineering changes</li>
     </ul>
-    <p id="StatsTextHeadline">The most headline features I've designed in an update was $VALUE1$ during $UPDATENAME$</p>
-    <p id="StatsTextBalance">The most balance changes and small features I've designed in an update was $VALUE1$ during $UPDATENAME$</p>
-    <p id="StatsTextBugs">The most bugs I've fixed in an update was $VALUE1$ during $UPDATENAME$</p>
-    <p id="StatsTextEngineering">The most engineering changes I've made in an update was $VALUE1$ during $UPDATENAME$</p>
-    <p id="StatsTextTotal">I've fixed an average of $VALUE1$ of bugs per update cycle!</p>
+    <p id="StatsTextHeadline">The most headline features I've designed in an update was <span class="value">$VALUE1$</span> during <a id="StatsLink" class="UpdateLink">$UPDATENAME$</a></p>
+    <p id="StatsTextBalance">The most balance changes and small features I've designed in an update was <span class="value">$VALUE1$</span> during <a id="BalanceLink" class="UpdateLink">$UPDATENAME$</a></p>
+    <p id="StatsTextBugs">The most bugs I've fixed in an update was <span class="value">$VALUE1$</span> during <a id="BugsLink" class="UpdateLink">$UPDATENAME$</a></p>
+    <p id="StatsTextEngineering">The most engineering changes I've made in an update was <span class="value">$VALUE1$</span> during <a id="EngineeringLink" class="UpdateLink">$UPDATENAME$</a></p>
+    <p id="StatsTextTotal">I've fixed an average of <span class="value">$VALUE1$</span> of bugs per update cycle!</p>
   </div>
   <hr>
   <div id="updates">
