commented out More Stats
plus fixed a typo!

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <p id="StatsTextEngineering">The most engineering changes I've made in an update was <span class="value">$VALUE1$</span> during <a id="EngineeringLink" class="UpdateLink">$UPDATENAME$</a></p>
     <p id="StatsTextTotal">I've fixed an average of <span class="value">$VALUE1$</span> of bugs per update cycle!</p>
     <br>
-    <button type="button" id="ExtraGraphButton" OnClick="ShowExtraGraphButton()">Show More Statistics</button>
+    <!--  <button type="button" id="ExtraGraphButton" OnClick="ShowExtraGraphButton()">Show More Statistics</button> -->
     <div id="MoreInfo" style="display:none;">
       <hr>
       <div id="Graph2"></div>
@@ -61,7 +61,7 @@
   </div>
   <hr>
   <div id="updates">
-    <div id="U58">
+    <div id="U59">
       <div class="header">
         <h2>Update 59: Droaam Legendary Edition</h2>
         <p>April 26th, 2023</p>
