--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </div>
   <div id="header">
     <h1>Everything I have done for DDO</h1>
-    <p>Everything listed here is a feature or fix that I have either built or majorly designed. I have omitted release notes for items I did not contribute meaningfully towards. <br><span class="patch">List items in blue were added in a subsequent patch.</span></p>
+    <p>Everything listed here is a feature or fix for which I was responsible - either via design or via implementation. If you'd like to see some analysis of my body of work, I've provided some statistics under the "Show Stats" button in the control panel. <br><span class="patch">List items in blue were added in a subsequent patch.</span></p>
   </div>
   <div id="GraphSection" style="display:none;">
     <hr>
@@ -49,6 +49,7 @@
     <p id="StatsTextBugs">The most bugs I've fixed in an update was <span class="value">$VALUE1$</span> during <a id="BugsLink" class="UpdateLink">$UPDATENAME$</a></p>
     <p id="StatsTextEngineering">The most engineering changes I've made in an update was <span class="value">$VALUE1$</span> during <a id="EngineeringLink" class="UpdateLink">$UPDATENAME$</a></p>
     <p id="StatsTextTotal">I've fixed an average of <span class="value">$VALUE1$</span> of bugs per update cycle!</p>
+    <p>Finally, a personal note on feature ownership: by definition, a list like this minimizes the many wonderful contributions of my very talented, very dedicated team members past and present. To that end, I'd like to make it very clear that all of this could not and would not be possible without the unending and tireless support of the current DDO team, and the many countless hands that came before them. I've made this website as a way to hold myself accountable to my own lofty standards, and not as a way of comparing myself to my peers and friends - which is why I am only analyzing my own performance against myself and not the rest of the team. Brass tacks, it takes a lot of work to run a MMO. And I'm not talking about it being a lot of work to add new stuff, I mean to just keep going without doing anything, that takes a huge amount of talent, time, effort, and dedication. So please, as a personal favor to myself and the DDO team, take my words at face value when I say that our teamwork is what makes the, for lack of a better phrase, dream work.</p>
     <br>
     <!--  <button type="button" id="ExtraGraphButton" OnClick="ShowExtraGraphButton()">Show More Statistics</button> -->
     <div id="MoreInfo" style="display:none;">
