Now updated to update 60

--- a/index.html
+++ b/index.html
@@ -62,6 +62,112 @@
   </div>
   <hr>
   <div id="updates">
+    <div id="U60">
+      <div class="header">
+        <h2>Update 60: Vecna Unleashed Prepurchase</h2>
+        <p>July 26th, 2023</p>
+      </div>
+      <div class="features">
+        <h3>Main Features:</h3>
+        <ul>
+          <li>Machrotechnic: A new Epic Destiny</li>
+          <li>New Epic Past Life: Trap Damage Absorption</li>
+        </ul>
+      </div>
+      <div class="balance">
+        <h3>Balance and Small Features:</h3>
+        <ul>
+          <li>The Legendary Curse of Agony now has a maximum duration of 60 seconds.</li>
+          <li>The pause at the end of tumbling with the Experimental Tumble Controls has been removed, allowing for a seamless Dodge experience.</li>
+          <li>Exalted Whirlwind and Avenging Whirlwind now work with Be The Whirlwind.</li>
+          <li>Quest Experience has been adjusted:
+            <ul>
+              <li>Bravery Bonus has been renamed Delving Bonus.</li>
+              <li>Conquest now has a ceiling of 100 Kills that will always trigger conquest bonus.</li>
+              <li>Many quests now have working conquest bonuses that didn't before.</li>
+              <li>Kill Thresholds for Aggression/Onslaught/Conquest are now at lower values of 25%/50%/75%.</li>
+              <li>Reaper First time bonus reduced to 45%. 50% of reaper's first time bonus has been moved into a new Delving Tier (Hard 50%/Elite 100%/Reaper 150%).</li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <div class="bugfixes">
+        <h3>Bugfixes:</h3>
+        <ul>
+          <li>The Wrathful Weapons weapon tooltip now has accurate text.</li>
+          <li>Titania's Glory now references the correct helmet in its description.</li>
+          <li>Corrected a misspelled Tiefling in Devil Assault.</li>
+          <li>A typo in Soul Survivor's quest journal text has been fixed.</li>
+          <li>Fixed a typo in When There's Smoke's objective text.</li>
+          <li>Fixed typos in Olyn Araphyr's dialogue.</li>
+          <li>The Stone Giant walking around Gianthold has remembered how to use his legs again and will no longer hop along his path at a jaunty angle.</li>
+          <li>Removed bad tooltip info from an Enlightened Spirit ability.</li>
+          <li>Heroic, Epic and Legendary ancient Vulkoorim Daggers now have their proper material.</li>
+          <li>Pack Aptitude now properly grants its +6 bonus, and its tooltip has been corrected.</li>
+          <li>The tooltip in Morninglord enhancements for Sunburst has ben fixed.</li>
+          <li>Flurry of Blows now grants its Dodge bonus at its correct levels.</li>
+          <li>If you gained Flurry of Blows via Sacred Fist levels, the Dodge bonus is now correctly based off your Paladin level and not Monk level.</li>
+          <li>The set bonus effect of the Menechtarun Scavenger set has been fixed.</li>
+          <li>Some Collectable turn-in NPCs have had their descriptions fixed.</li>
+          <li>Combat Brute no longer sticks to your weapon forever.</li>
+          <li>Maiming found on randomly generated and named items now correctly only triggers on a critical hit.</li>
+          <li>Metalline Bond now displays on your weapon properly.</li>
+          <li>The Silverscale augment now has a more accurate tooltip.</li>
+          <li>Tooltips on Proof against Poison and Disease Augments have been fixed.</li>
+          <li>Laughter's Melee Power now applies more reliably.</li>
+          <li>Hallowed items are now correctly Enhancement typed bonuses and not Sacred typed bonuses, and also boost the correct stat.</li>
+          <li>The exit in Haverdasher is now named The Harbor instead of The Marketplace.</li>
+          <li>Consecration now properly heals hirelings.</li>
+          <li>Corrected a text error in Lightning the Candle's buff.</li>
+          <li>The Power Word spells are now correctly listed as Enchantment spells.</li>
+          <li>Acid Bolt is now properly a conjuration spell.</li>
+          <li>Fixed the description of the Thorn Blade spell.</li>
+          <li>Vile Eruption now deals its correct damage through Earthquake.</li>
+          <li>Fixed description on Grandmaster of Oceans.</li>
+          <li>Fixed name of Rakhat's Trifle and other miscellaneous Rakhat text.</li>
+          <li>Fixed the description of Heal, Mass.</li>
+          <li>Diplomacy is now slightly less buggy!</li>
+          <li>Druid's Improved Dodge now has a % sign in its tooltip.</li>
+          <li>Uncanny Balance now has its correct prerequisites.</li>
+          <li>Stormsinger's Electrocution now correctly triggers from Cold spells, and boosts Cold Spell Power.</li>
+          <li>Distraction from Feydark Illusionist may now properly be used without breaking stealth.</li>
+          <li>Kelas' Volatile Mixture is no longer secretly acting like a throwing dagger instead of an Orb.</li>
+          <li>Transcend Darkness can now be properly trained.</li>
+          <li>Fixed the names of Transcend Darkness and Transcend Light to better match the abilities granted.</li>
+          <li>Blossoming Peace now correctly adds its stun to Orchard Blossom.</li>
+          <li>Burst of Glacial Wrath now properly takes the Embolden Metamagic.</li>
+          <li>Removed erroneous weird recipes from the Hunt or Be Hunted raid turn-in.</li>
+          <li>A typo in the Legendary Winter set bonus has been fixed.</li>
+          <li>Cruel Cut and Mutilate now apply reliably.</li>
+          <li>Steal Life Force's heal now properly scales with 150% Spell Power.</li>
+          <li>Multiclassing into Monk now properly allows you to take Spring Attack and Ten Thousand Stars at Monk levels 1 and 2.</li>
+          <li>Legendary Aim now applies correctly if you are using a Repeating Crossbow and/or a thrown weapon with something in your offhand.</li>
+          <li>Dark Hunter's Medium Armor boost from its 2nd core no longer applies 100% of the time.</li>
+          <li>Druidic Wild Shape items now work on all wild shapes not just wolf/bear variants.</li>
+          <li>Dark Hunter's Bleed the Weak now properly scales with Melee and Ranged Power.</li>
+          <li>Newly created copies of the Kundarak Delving Suit now have slightly different effects to avoid overlaps.</li>
+          <li>The 4th core in Ravager now gives its Maximum Hit Points</li>
+        </ul>
+      </div>
+      <div class="engineering">
+        <h3>Engineering:</h3>
+        <ul>
+          <li>You can now right click a party member in the party UI to send them a tell.</li>
+          <li>The Experience Report window has gotten a slight overhaul!
+            <ul>
+              <li>No longer reports about bravery streaks (as that mechanic has been deprecated for several years).</li>
+              <li>Now contains less empty space.</li>
+              <li>Now reports starting Reaper XP accurately.</li>
+              <li>Now shows you the previously-hidden Reaper First Time Bonus to Reaper XP.</li>
+              <li>Now shows your estimated Reaper XP even if you haven't activated Reaper XP by killing 10 monsters yet.</li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+    
+    <hr>
+    
     <div id="U59">
       <div class="header">
         <h2>Update 59: Droaam Legendary Edition</h2>
